Fix startup bug